<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2B2B">

    <RelativeLayout
        android:id="@+id/relativeLayout_two"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="65dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/photo_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:scaleType="centerCrop"
            app:riv_corner_radius="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/top_gradient_mode">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/britanic"
                android:text="@string/shnur"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="293dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_baseline_more_white"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/radius_mode"
            android:gravity="bottom">

            <ImageView
                android:id="@+id/like_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_like_border"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/like_quantity"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/fol"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_comment"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/post"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="150dp"
                android:src="@drawable/ic_ookmark_add"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_comment"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout_two"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/radius_comment"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="50dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/avatar"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/add_a_comment"
            android:textColor="#A1A1A1"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>